--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "finrates",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -31,6 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.2",
+    "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.2.13"
   }
 }
