--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finrates",
+  "name": "FinRates",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -33,6 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.2",
     "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.2.13"
+    "vite": "^5.2.13",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
