--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "ag-charts-react": "^9.3.1",
+    "chart.js": "^4.4.3",
     "material-react-table": "^2.13.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
