--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "ag-charts-react": "^9.3.1",
-    "chart.js": "^4.4.3",
     "material-react-table": "^2.13.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
@@ -35,8 +33,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.2",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "vite": "^5.2.13",
-    "vite-plugin-pwa": "^0.20.0"
+    "del": "^7.1.0"
   }
 }
