--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "ag-charts-react": "^9.3.1",
     "material-react-table": "^2.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "del": "^7.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -35,7 +37,6 @@
     "prettier": "^3.3.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.2.13",
-    "del": "^7.1.0"
+    "vite": "^5.2.13"
   }
 }
