--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext js,jsx",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "deploy": "npm run build && cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
