--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
     "format": "prettier --write ./src",
+    "svg-build": "npx svg-sprite --symbol --symbol-dest=public --symbol-sprite=fnr-assets.svg --log=verbose src/assets/logos/*.svg",
     "deploy": "npm run build && cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "prettier": "^3.3.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.2.13"
+    "vite": "^5.2.13",
+    "svg-sprite": "^2.0.4"
   }
 }
