--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
     "ag-charts-react": "^9.3.1",
+    "firebase": "^10.13.0",
     "material-react-table": "^2.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,10 +41,11 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "firebase-tools": "^13.15.2",
     "prettier": "^3.3.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "vite": "^5.2.13",
-    "svg-sprite": "^2.0.4"
+    "svg-sprite": "^2.0.4",
+    "vite": "^5.2.13"
   }
 }
