--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "preview": "vite preview",
     "format": "prettier --write ./src",
     "svg-build": "npx svg-sprite --symbol --symbol-dest=public --symbol-sprite=fnr-assets.svg --log=verbose src/assets/logos/*.svg",
-    "deploy": "npm run build && cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main",
-    "prod:deploy": "npm run build && firebase deploy --only hosting"
+    "deploy": "cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main",
+    "prod:deploy": "firebase deploy --only hosting"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
