--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "deploy": "cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main",
     "prod:deploy": "firebase deploy --only hosting",
     "deploy:both": "npm run deploy && npm run prod:deploy",
-    "deploy:full": "npm run build && npm run deploy:both"
+    "deploy:full": "npm run build && npm run deploy:both",
+    "build:preview": "npm run build && npm run preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
