--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "build:preview": "npm run build && npm run preview"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
@@ -37,6 +39,7 @@
     "to-words": "^4.0.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.2",
     "@vitejs/plugin-react": "^4.3.1",
     "del": "^7.1.0",
     "eslint": "^8.57.0",
