--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^6.1.2",
+    "@capacitor/app": "^6.0.2",
     "@capacitor/core": "^6.1.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
