--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write ./src",
     "svg-build": "npx svg-sprite --symbol --symbol-dest=public --symbol-sprite=fnr-assets.svg --log=verbose src/assets/logos/*.svg",
     "deploy": "cd ../strmdctem.github.io && git add . && git commit -m deploy && git push origin main",
-    "prod:deploy": "firebase deploy --only hosting",
+    "deploy:prod": "npm run build && firebase deploy --only hosting",
     "deploy:both": "npm run deploy && npm run prod:deploy",
     "deploy:full": "npm run build && npm run deploy:both",
     "build:preview": "npm run build && npm run preview"
