--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "startC": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx",
@@ -19,9 +19,9 @@
     "build:preview": "npm run build && npm run preview"
   },
   "dependencies": {
-    "@capacitor/android": "^6.1.2",
-    "@capacitor/app": "^6.0.2",
-    "@capacitor/core": "^6.1.2",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/core": "^7.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
@@ -35,12 +35,10 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "to-words": "^4.0.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "^6.1.2",
+    "@capacitor/cli": "^7.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "del": "^7.1.0",
     "eslint": "^8.57.0",
