--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite --host",
     "startC": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
-    "build": "vite build",
+    "build": "npm run generate-version && vite build",
     "lint": "eslint . --ext js,jsx",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
@@ -16,12 +16,14 @@
     "deploy:prod": "npm run build && firebase deploy --only hosting",
     "deploy:both": "npm run deploy && npm run prod:deploy",
     "deploy:full": "npm run build && npm run deploy:both",
-    "build:preview": "npm run build && npm run preview"
+    "build:preview": "npm run build && npm run preview",
+    "generate-version": "node scripts/generateVersion.js"
   },
   "dependencies": {
     "@capacitor/android": "^7.0.0",
     "@capacitor/app": "^7.0.0",
     "@capacitor/core": "^7.0.0",
+    "@capacitor/share": "^7.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
