feat: update build script, enhance bank selection, and improve sharing functionality

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite --host",
     "startC": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
-    "build": "npm run generate-version && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx",
     "lint:fix": "eslint . --ext js,jsx --fix",
     "preview": "vite preview",
