--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ag-charts-react": "^10.0.0",
     "firebase": "^10.13.0",
     "material-react-table": "^2.13.0",
+    "mui-markdown": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.13.0",
