--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/splash-screen": "^7.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.2.6",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
